tmp-prod-full/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <label>Error_Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>