tmp-prod-full/objects/Error_Log__c/fields/ApiEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ApiEndpoint__c</fullName>
    <label>ApiEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>