tmp-prod-full/objects/Error_Log__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>에러 코드</description>
    <label>Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>