tmp-prod-full/objects/Error_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error_Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>